# TutorStud

./: .gitignore  .replit  ARCHITECTURE.md  FLEXIBLE_SCHEDULING.md  IMPLEMENTATION_COMPLETE.md  README.md  README_SCHEDULING.md  SCHEDULE_TUTORIAL.md  START_HERE.md  SYSTEM_REDESIGN.md  db.sqlite3  db1.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted-Build-a-production-ready-Django-web-application-for-a-p_1777801421889.txt  Pasted-Enhance-and-refactor-the-scheduling-system-in-the-Djang_1777804282044.txt  Pasted-Enhance-the-Django-tutor-management-system-by-adding-FU_1777802893887.txt  Pasted-Enhance-the-Django-tutor-management-system-to-fully-sup_1777805505602.txt  Pasted-Enhance-the-existing-Django-tutor-management-system-by-_1777804123047.txt  Pasted-Perform-a-FULL-SYSTEM-REVIEW-REFACTOR-and-DOCUMENTATION_1777803141993.txt
client/src/: App.tsx  index.css
scheduler/: admin.py  analytics.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
scheduler/migrations/: 0001_initial.py  0002_remove_student_phone.py  0002_remove_student_timezone_and_more.py  0002_student_country_student_timezone.py  0003_enrollment_redesign.py  0003_recurringschedule_created_at_and_more.py  0003_recurringschedule_session_recurring_schedule_and_more.py  0004_alter_subscription_hourly_rate.py  0004_studentenrollment_recurring_schedule_and_more.py  0005_workinghoursrange.py
server/: routes.ts  storage.ts
shared/: schema.ts
static/css/: main.css
templates/: base.html
tutor_system/: asgi.py  settings.py  urls.py  wsgi.py
(+47 files in other folders)
