[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crispy-bootstrap5>=2026.3",
    "django>=5.2.13",
    "django-crispy-forms>=2.6",
    "pillow>=12.2.0",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "whitenoise>=6.12.0",
]
